# smartquote

./: .gitignore  .release-please-manifest.json  CLAUDE.md  README.md  conductor.json  package.json  pnpm-lock.yaml  release-please-config.json  vercel.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
.husky/: pre-commit
apps/web/: eslint.config.js  next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
examples/eslint/: README.md  eslint.config.js  package.json
examples/eslint/src/: Example.tsx
examples/vercel-ai-sdk/: README.md  index.ts  package.json
python/: README.md  pyproject.toml
python/smartquotes/: __init__.py  core.py
python/tests/: test_core.py
