[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartquotes"
version = "0.1.0"
description = "Smart quote conversion utilities for typographically correct quotes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["smart-quotes", "typography", "curly-quotes", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/andybons/smartquotes"
Repository = "https://github.com/andybons/smartquotes"

[tool.hatch.build.targets.wheel]
packages = ["smartquotes"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
